# NCKH

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
configs/: default.yaml
configs/retrieval/: index_default.yaml  index_faiss.yaml
configs/segmentation/: clip_latefusion.yaml  text_only.yaml
data/: README.md
docs/: annotation_guideline.md  dataset_format.md  experiment_protocol.md
scripts/: 01_extract_frames.py  02_run_asr.py  03_run_ocr.py  04_build_embeddings.py  05_segment_video.py  06_build_index.py  07_retrieve.py  08_evaluate.py
src/vlm_video/: __init__.py
src/vlm_video/common/: __init__.py  config.py  io_jsonl.py  logging_utils.py  timestamp.py
src/vlm_video/embeddings/: __init__.py  clip_encoder.py  fusion.py  text_encoder.py
src/vlm_video/evaluation/: __init__.py  boundary_f1.py  retrieval_metrics.py
src/vlm_video/pipelines/: __init__.py  run_all.py
src/vlm_video/preprocess/: __init__.py  asr_wrapper.py  ffmpeg_utils.py  ocr_wrapper.py
src/vlm_video/retrieval/: base_index.py  faiss_index.py  index_factory.py  llm_reranker.py  query_encoder.py  ranking.py  sklearn_index.py
src/vlm_video/segmentation/: __init__.py  baselines.py  change_score.py  segmenter.py  thresholding.py
tests/: __init__.py  test_boundary_f1.py  test_retrieval_backend.py
